# cannbot_spmv

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  main.cpp  mps_reader.cpp  mps_reader.h  run.sh  spmv.asc  utils.cpp  utils.h  待测试的A矩阵基本信息.csv
cmake/: npu_lib.cmake
scripts/: gen_data.py  verify_result.py
